# ramsey-dl

./: LICENSE  README.md  cargo.toml  rustc-ice-2024-12-21T09_41_44-126548.txt  rustc-ice-2024-12-21T13_20_35-527568.txt  stack_trace.txt  terminal_output.txt
crates/data_generator/: Cargo.toml
crates/data_generator/src/: cli.rs  coloring_generation.rs  label_generation.rs  lib.rs  main.rs  run.rs  save_data.rs
crates/ramsey_theory/: Cargo.toml
crates/ramsey_theory/src/: assert_const_generics.rs  colorings.rs  lib.rs  problems.rs  sequence_coloring.rs
crates/ramsey_theory/src/colorings/: coloring.rs  compressed_coloring.rs  sequence_coloring.rs
data_generator/: Cargo.toml
data_generator/src/: lib.rs  main.rs  sequence_coloring.rs
src/: main.rs
